// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for minWidth: 36, maxWidth: 230, columns: 10 and compact: true 1`] = `
":host {
  display: grid;
  grid-auto-rows: 1fr !important;
  grid-template-columns: repeat(10, minmax(0, 1fr)) !important;
  gap: max(4px, var(--p-internal-segmented-control-scaling, 0.5) * 6px) !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}"
`;

exports[`getComponentCss() > should return correct css for minWidth: 46, maxWidth: 20, columns: { base: 4, s: 3, m: 2, l: 'auto' } and compact: true 1`] = `
":host {
  display: grid;
  grid-auto-rows: 1fr !important;
  grid-template-columns: repeat(4, minmax(0, 1fr)) !important;
  gap: max(4px, var(--p-internal-segmented-control-scaling, 0.5) * 6px) !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
  }
}

@media(min-width:1000px) {
  :host {
    grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
  }
}

@media(min-width:1300px) {
  :host {
    grid-template-columns: repeat(auto-fit, 46px) !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for minWidth: 46, maxWidth: 20, columns: auto and compact: false 1`] = `
":host {
  display: grid;
  grid-auto-rows: 1fr !important;
  grid-template-columns: repeat(auto-fit, 46px) !important;
  gap: max(4px, var(--p-internal-segmented-control-scaling, 1) * 6px) !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}"
`;

exports[`getComponentCss() > should return correct css for minWidth: 46, maxWidth: 80, columns: 1 and compact: false 1`] = `
":host {
  display: grid;
  grid-auto-rows: 1fr !important;
  grid-template-columns: repeat(1, minmax(0, 1fr)) !important;
  gap: max(4px, var(--p-internal-segmented-control-scaling, 1) * 6px) !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}"
`;
